src/snapshots/repoverlay__selection__tests__snapshot_flat_ui_disabled_highlighted.snap
---
source: src/selection.rs
expression: buffer_to_string(&buffer)
---
Choose overlays to apply:

Search: (press / to search)
Selected: 0/1

  [ ] my-overlay  (~/overlays/my-overlay)
> [✓] shared  (already applied)












↑↓ move Space toggle Enter confirm a all / search Esc cancel
