src/snapshots/repoverlay__selection__tests__snapshot_flat_ui_search_mode.snap
---
source: src/selection.rs
expression: buffer_to_string(&buffer)
---
Choose overlays to apply:

Search: work_
Selected: 1/3

> [✓] work-config  (~/overlays/work)













Type to search | Enter/Esc done | Ctrl+C clear
