src/snapshots/repoverlay__selection__tests__snapshot_selection_ui_nested.snap
---
source: src/selection.rs
expression: buffer_to_string(&buffer)
---
Select files to include in overlay

Categories: [1] AI (3/3) [2] DIR (2/2) [3] GI (0/1) [4] UT (0/0)
Search: (press / to search)
Selected: 3 AI, 2 DIR

  [✓] CLAUDE.md
▼ [✓] .claude/
    [✓] settings.json
  ▼ [✓] commands/
      [✓] test.md
  [ ] .envrc











↑↓ move ←→ expand Space toggle Enter confirm a all 1-4 filter / search Esc cance
