src/snapshots/repoverlay__selection__tests__snapshot_selection_ui_no_matches.snap
---
source: src/selection.rs
expression: buffer_to_string(&buffer)
---
Select files to include in overlay

Categories: [1] AI (2/2) [2] DIR (0/0) [3] GI (0/2) [4] UT (0/1)
Search: zzzzz_no_match (Esc to clear)
Selected: 2 AI


















↑↓ move ←→ expand Space toggle Enter confirm a all 1-4 filter / search Esc cance
